--- a/pom.xml
+++ b/pom.xml
@@ -11,4 +11,21 @@
         <maven.compiler.target>17</maven.compiler.target>
         <exec.mainClass>com.mycompany.compiler.main.Compiler</exec.mainClass>
     </properties>
+    <build>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>3.1.0</version>
+            <configuration>
+                <archive>
+                    <manifest>
+                        <mainClass>com.mycompany.compiler.main.Compiler</mainClass>
+                    </manifest>
+                </archive>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
+
 </project>
