--- a/pom.xml
+++ b/pom.xml
@@ -27,5 +27,11 @@
         </plugin>
     </plugins>
 </build>
-
+<dependencies>
+    <dependency>
+        <groupId>org.json</groupId>
+        <artifactId>json</artifactId>
+        <version>20231013</version>
+    </dependency>
+</dependencies>
 </project>
